# ai-sales-dr-mirza-api

./: README.md  vercel.json
app/: .gitignore  README.md  __init__.py  main.py  pyproject.toml
app/api/v1/: dependencies.py
app/api/v1/routes/: leads.py
app/core/: __init__.py  config.py  exception.py
app/models/: __init__.py  domain.py  schemas.py
app/repositories/: base.py  lead_repository.py
app/services/: lead_service.py
app/utils/: pagination.py  seed_data.py
