[tool.setuptools]
packages = ["api", "core", "models", "repositories", "services", "utils"]

[project]
name = "ai-sales-dr-api"
version = "1.0.0"
description = "AI Sales Doctor Lead Management API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "faker>=22.0.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.3.0",
]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mirza Dipradhana", email = "madipradhana@gmail.com" },
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
